Lexical analysis/src/antlr/clongParser.py
# Generated from clong.g4 by ANTLR 4.7.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
from typing.io import TextIO
import sys




class clongParser ( Parser ):

    grammarFileName = "clong.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'#include'", "'<'", "'.h'", "'.cpp'", 
                     "'>'", "'int'", "'void'", "'main'", "'()'", "'{'", 
                     "'}'", "';'", "'printf'", "'('", "','", "')'", "'gets'", 
                     "'strlen'", "'return'", "'if'", "'else'", "'while'", 
                     "'for'", "'='", "'['", "']'", "'-'", "'+'", "'*'", 
                     "'/'", "'%'", "'>='", "'<='", "'=='", "'!='", "'&&'", 
                     "'||'", "'!'", "'char'", "'double'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "PARAM", "INT", "DOUBLE", "CHAR", "STRING", 
                      "LineComment", "BlockComment", "DELIMITER", "SPACE" ]

    RULE_prog = 0
    RULE_head = 1
    RULE_include = 2
    RULE_main = 3
    RULE_body = 4
    RULE_func = 5
    RULE_block = 6
    RULE_printf = 7
    RULE_gets = 8
    RULE_strlen = 9
    RULE_returnFunc = 10
    RULE_ifElse = 11
    RULE_ifFunc = 12
    RULE_elseif = 13
    RULE_elseFunc = 14
    RULE_whileFunc = 15
    RULE_forFunc = 16
    RULE_initFunc = 17
    RULE_assignFunc = 18
    RULE_initParam = 19
    RULE_initArray = 20
    RULE_assign = 21
    RULE_exp = 22
    RULE_typeParam = 23
    RULE_array = 24
    RULE_paramName = 25
    RULE_intm = 26
    RULE_doublem = 27
    RULE_charm = 28
    RULE_stringm = 29

    ruleNames =  [ "prog", "head", "include", "main", "body", "func", "block", 
                   "printf", "gets", "strlen", "returnFunc", "ifElse", "ifFunc", 
                   "elseif", "elseFunc", "whileFunc", "forFunc", "initFunc", 
                   "assignFunc", "initParam", "initArray", "assign", "exp", 
                   "typeParam", "array", "paramName", "intm", "doublem", 
                   "charm", "stringm" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    T__24=25
    T__25=26
    T__26=27
    T__27=28
    T__28=29
    T__29=30
    T__30=31
    T__31=32
    T__32=33
    T__33=34
    T__34=35
    T__35=36
    T__36=37
    T__37=38
    T__38=39
    T__39=40
    PARAM=41
    INT=42
    DOUBLE=43
    CHAR=44
    STRING=45
    LineComment=46
    BlockComment=47
    DELIMITER=48
    SPACE=49

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.7.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def head(self):
            return self.getTypedRuleContext(clongParser.HeadContext,0)


        def main(self):
            return self.getTypedRuleContext(clongParser.MainContext,0)


        def EOF(self):
            return self.getToken(clongParser.EOF, 0)

        def getRuleIndex(self):
            return clongParser.RULE_prog

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProg" ):
                listener.enterProg(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProg" ):
                listener.exitProg(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProg" ):
                return visitor.visitProg(self)
            else:
                return visitor.visitChildren(self)




    def prog(self):

        localctx = clongParser.ProgContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_prog)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 60
            self.head()
            self.state = 61
            self.main()
            self.state = 62
            self.match(clongParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class HeadContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def include(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(clongParser.IncludeContext)
            else:
                return self.getTypedRuleContext(clongParser.IncludeContext,i)


        def getRuleIndex(self):
            return clongParser.RULE_head

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterHead" ):
                listener.enterHead(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitHead" ):
                listener.exitHead(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitHead" ):
                return visitor.visitHead(self)
            else:
                return visitor.visitChildren(self)




    def head(self):

        localctx = clongParser.HeadContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_head)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 67
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==clongParser.T__0:
                self.state = 64
                self.include()
                self.state = 69
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IncludeContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return clongParser.RULE_include

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterInclude" ):
                listener.enterInclude(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitInclude" ):
                listener.exitInclude(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitInclude" ):
                return visitor.visitInclude(self)
            else:
                return visitor.visitChildren(self)




    def include(self):

        localctx = clongParser.IncludeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_include)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 70
            self.match(clongParser.T__0)
            self.state = 71
            self.match(clongParser.T__1)
            self.state = 75
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,1,self._ctx)
            while _alt!=1 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1+1:
                    self.state = 72
                    self.matchWildcard() 
                self.state = 77
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,1,self._ctx)

            self.state = 79
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==clongParser.T__2 or _la==clongParser.T__3:
                self.state = 78
                _la = self._input.LA(1)
                if not(_la==clongParser.T__2 or _la==clongParser.T__3):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()


            self.state = 81
            self.match(clongParser.T__4)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MainContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def body(self):
            return self.getTypedRuleContext(clongParser.BodyContext,0)


        def getRuleIndex(self):
            return clongParser.RULE_main

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMain" ):
                listener.enterMain(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMain" ):
                listener.exitMain(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMain" ):
                return visitor.visitMain(self)
            else:
                return visitor.visitChildren(self)




    def main(self):

        localctx = clongParser.MainContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_main)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 83
            _la = self._input.LA(1)
            if not(_la==clongParser.T__5 or _la==clongParser.T__6):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
            self.state = 84
            self.match(clongParser.T__7)
            self.state = 85
            self.match(clongParser.T__8)
            self.state = 86
            self.match(clongParser.T__9)
            self.state = 87
            self.body()
            self.state = 88
            self.match(clongParser.T__10)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BodyContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def func(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(clongParser.FuncContext)
            else:
                return self.getTypedRuleContext(clongParser.FuncContext,i)


        def block(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(clongParser.BlockContext)
            else:
                return self.getTypedRuleContext(clongParser.BlockContext,i)


        def getRuleIndex(self):
            return clongParser.RULE_body

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBody" ):
                listener.enterBody(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBody" ):
                listener.exitBody(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBody" ):
                return visitor.visitBody(self)
            else:
                return visitor.visitChildren(self)




    def body(self):

        localctx = clongParser.BodyContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_body)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 94
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << clongParser.T__5) | (1 << clongParser.T__12) | (1 << clongParser.T__16) | (1 << clongParser.T__17) | (1 << clongParser.T__18) | (1 << clongParser.T__19) | (1 << clongParser.T__21) | (1 << clongParser.T__22) | (1 << clongParser.T__38) | (1 << clongParser.T__39) | (1 << clongParser.PARAM))) != 0):
                self.state = 92
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [clongParser.T__12, clongParser.T__16, clongParser.T__17, clongParser.T__18]:
                    self.state = 90
                    self.func()
                    pass
                elif token in [clongParser.T__5, clongParser.T__19, clongParser.T__21, clongParser.T__22, clongParser.T__38, clongParser.T__39, clongParser.PARAM]:
                    self.state = 91
                    self.block()
                    pass
                else:
                    raise NoViableAltException(self)

                self.state = 96
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FuncContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def printf(self):
            return self.getTypedRuleContext(clongParser.PrintfContext,0)


        def gets(self):
            return self.getTypedRuleContext(clongParser.GetsContext,0)


        def strlen(self):
            return self.getTypedRuleContext(clongParser.StrlenContext,0)


        def returnFunc(self):
            return self.getTypedRuleContext(clongParser.ReturnFuncContext,0)


        def getRuleIndex(self):
            return clongParser.RULE_func

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunc" ):
                listener.enterFunc(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunc" ):
                listener.exitFunc(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFunc" ):
                return visitor.visitFunc(self)
            else:
                return visitor.visitChildren(self)




    def func(self):

        localctx = clongParser.FuncContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_func)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 101
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [clongParser.T__12]:
                self.state = 97
                self.printf()
                pass
            elif token in [clongParser.T__16]:
                self.state = 98
                self.gets()
                pass
            elif token in [clongParser.T__17]:
                self.state = 99
                self.strlen()
                pass
            elif token in [clongParser.T__18]:
                self.state = 100
                self.returnFunc()
                pass
            else:
                raise NoViableAltException(self)

            self.state = 103
            self.match(clongParser.T__11)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BlockContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ifElse(self):
            return self.getTypedRuleContext(clongParser.IfElseContext,0)


        def whileFunc(self):
            return self.getTypedRuleContext(clongParser.WhileFuncContext,0)


        def forFunc(self):
            return self.getTypedRuleContext(clongParser.ForFuncContext,0)


        def initParam(self):
            return self.getTypedRuleContext(clongParser.InitParamContext,0)


        def initArray(self):
            return self.getTypedRuleContext(clongParser.InitArrayContext,0)


        def assign(self):
            return self.getTypedRuleContext(clongParser.AssignContext,0)


        def getRuleIndex(self):
            return clongParser.RULE_block

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBlock" ):
                listener.enterBlock(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBlock" ):
                listener.exitBlock(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBlock" ):
                return visitor.visitBlock(self)
            else:
                return visitor.visitChildren(self)




    def block(self):

        localctx = clongParser.BlockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_block)
        try:
            self.state = 111
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,6,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 105
                self.ifElse()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 106
                self.whileFunc()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 107
                self.forFunc()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 108
                self.initParam()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 109
                self.initArray()
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 110
                self.assign()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PrintfContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def paramName(self):
            return self.getTypedRuleContext(clongParser.ParamNameContext,0)


        def stringm(self):
            return self.getTypedRuleContext(clongParser.StringmContext,0)


        def exp(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(clongParser.ExpContext)
            else:
                return self.getTypedRuleContext(clongParser.ExpContext,i)


        def getRuleIndex(self):
            return clongParser.RULE_printf

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPrintf" ):
                listener.enterPrintf(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPrintf" ):
                listener.exitPrintf(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPrintf" ):
                return visitor.visitPrintf(self)
            else:
                return visitor.visitChildren(self)




    def printf(self):

        localctx = clongParser.PrintfContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_printf)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 113
            self.match(clongParser.T__12)
            self.state = 114
            self.match(clongParser.T__13)
            self.state = 124
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [clongParser.STRING]:
                self.state = 115
                self.stringm()
                self.state = 120
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==clongParser.T__14:
                    self.state = 116
                    self.match(clongParser.T__14)
                    self.state = 117
                    self.exp(0)
                    self.state = 122
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                pass
            elif token in [clongParser.PARAM]:
                self.state = 123
                self.paramName()
                pass
            else:
                raise NoViableAltException(self)

            self.state = 126
            self.match(clongParser.T__15)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class GetsContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def paramName(self):
            return self.getTypedRuleContext(clongParser.ParamNameContext,0)


        def getRuleIndex(self):
            return clongParser.RULE_gets

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterGets" ):
                listener.enterGets(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitGets" ):
                listener.exitGets(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitGets" ):
                return visitor.visitGets(self)
            else:
                return visitor.visitChildren(self)




    def gets(self):

        localctx = clongParser.GetsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_gets)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 128
            self.match(clongParser.T__16)
            self.state = 129
            self.match(clongParser.T__13)
            self.state = 130
            self.paramName()
            self.state = 131
            self.match(clongParser.T__15)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StrlenContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def paramName(self):
            return self.getTypedRuleContext(clongParser.ParamNameContext,0)


        def getRuleIndex(self):
            return clongParser.RULE_strlen

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStrlen" ):
                listener.enterStrlen(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStrlen" ):
                listener.exitStrlen(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStrlen" ):
                return visitor.visitStrlen(self)
            else:
                return visitor.visitChildren(self)




    def strlen(self):

        localctx = clongParser.StrlenContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_strlen)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 133
            self.match(clongParser.T__17)
            self.state = 134
            self.match(clongParser.T__13)
            self.state = 135
            self.paramName()
            self.state = 136
            self.match(clongParser.T__15)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ReturnFuncContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def intm(self):
            return self.getTypedRuleContext(clongParser.IntmContext,0)


        def getRuleIndex(self):
            return clongParser.RULE_returnFunc

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterReturnFunc" ):
                listener.enterReturnFunc(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitReturnFunc" ):
                listener.exitReturnFunc(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitReturnFunc" ):
                return visitor.visitReturnFunc(self)
            else:
                return visitor.visitChildren(self)




    def returnFunc(self):

        localctx = clongParser.ReturnFuncContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_returnFunc)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 138
            self.match(clongParser.T__18)
            self.state = 140
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==clongParser.INT:
                self.state = 139
                self.intm()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IfElseContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ifFunc(self):
            return self.getTypedRuleContext(clongParser.IfFuncContext,0)


        def elseif(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(clongParser.ElseifContext)
            else:
                return self.getTypedRuleContext(clongParser.ElseifContext,i)


        def elseFunc(self):
            return self.getTypedRuleContext(clongParser.ElseFuncContext,0)


        def getRuleIndex(self):
            return clongParser.RULE_ifElse

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIfElse" ):
                listener.enterIfElse(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIfElse" ):
                listener.exitIfElse(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIfElse" ):
                return visitor.visitIfElse(self)
            else:
                return visitor.visitChildren(self)




    def ifElse(self):

        localctx = clongParser.IfElseContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_ifElse)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 142
            self.ifFunc()
            self.state = 146
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,10,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 143
                    self.elseif() 
                self.state = 148
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,10,self._ctx)

            self.state = 150
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==clongParser.T__20:
                self.state = 149
                self.elseFunc()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IfFuncContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def exp(self):
            return self.getTypedRuleContext(clongParser.ExpContext,0)


        def body(self):
            return self.getTypedRuleContext(clongParser.BodyContext,0)


        def getRuleIndex(self):
            return clongParser.RULE_ifFunc

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIfFunc" ):
                listener.enterIfFunc(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIfFunc" ):
                listener.exitIfFunc(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIfFunc" ):
                return visitor.visitIfFunc(self)
            else:
                return visitor.visitChildren(self)




    def ifFunc(self):

        localctx = clongParser.IfFuncContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_ifFunc)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 152
            self.match(clongParser.T__19)
            self.state = 153
            self.match(clongParser.T__13)
            self.state = 154
            self.exp(0)
            self.state = 155
            self.match(clongParser.T__15)
            self.state = 156
            self.match(clongParser.T__9)
            self.state = 157
            self.body()
            self.state = 158
            self.match(clongParser.T__10)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ElseifContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def exp(self):
            return self.getTypedRuleContext(clongParser.ExpContext,0)


        def body(self):
            return self.getTypedRuleContext(clongParser.BodyContext,0)


        def getRuleIndex(self):
            return clongParser.RULE_elseif

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterElseif" ):
                listener.enterElseif(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitElseif" ):
                listener.exitElseif(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitElseif" ):
                return visitor.visitElseif(self)
            else:
                return visitor.visitChildren(self)




    def elseif(self):

        localctx = clongParser.ElseifContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_elseif)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 160
            self.match(clongParser.T__20)
            self.state = 161
            self.match(clongParser.T__19)
            self.state = 162
            self.match(clongParser.T__13)
            self.state = 163
            self.exp(0)
            self.state = 164
            self.match(clongParser.T__15)
            self.state = 165
            self.match(clongParser.T__9)
            self.state = 166
            self.body()
            self.state = 167
            self.match(clongParser.T__10)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ElseFuncContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def body(self):
            return self.getTypedRuleContext(clongParser.BodyContext,0)


        def getRuleIndex(self):
            return clongParser.RULE_elseFunc

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterElseFunc" ):
                listener.enterElseFunc(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitElseFunc" ):
                listener.exitElseFunc(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitElseFunc" ):
                return visitor.visitElseFunc(self)
            else:
                return visitor.visitChildren(self)




    def elseFunc(self):

        localctx = clongParser.ElseFuncContext(self, self._ctx, self.state)
        self.enterRule(localctx, 28, self.RULE_elseFunc)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 169
            self.match(clongParser.T__20)
            self.state = 170
            self.match(clongParser.T__9)
            self.state = 171
            self.body()
            self.state = 172
            self.match(clongParser.T__10)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class WhileFuncContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def exp(self):
            return self.getTypedRuleContext(clongParser.ExpContext,0)


        def body(self):
            return self.getTypedRuleContext(clongParser.BodyContext,0)


        def getRuleIndex(self):
            return clongParser.RULE_whileFunc

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterWhileFunc" ):
                listener.enterWhileFunc(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitWhileFunc" ):
                listener.exitWhileFunc(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitWhileFunc" ):
                return visitor.visitWhileFunc(self)
            else:
                return visitor.visitChildren(self)




    def whileFunc(self):
